Added mobile detection, fixed mobile detection

--- a/Lightningv3/public_html/index.html
+++ b/Lightningv3/public_html/index.html
@@ -945,7 +945,7 @@ the overhead.
                 //check for mobile
                 for (var i = 0; i < mobileString.length; i++)
                 {
-                    if (userAgent.search(mobileString[i]) === true)
+                    if (userAgent.search(mobileString[i]) !== -1)
                     {
                         mobile = true;
                     }
